handle confirmation and UI changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <body>
     <ul></ul>
     <main>
-      <p></p>
+      <p class="code">
+        <timer-ring></timer-ring>
+        <button id="code"></button>
+      </p>
       <div id="confirmations"></div>
     </main>
     <!--<div class="container">
